--- a/index.html
+++ b/index.html
@@ -163,6 +163,140 @@
         </div>  
     </section>  
 
+    <!-- Add this after the Skills section (around line 176) and before the Contact section -->
+<section id="projects" class="mb-32">
+    <h2 class="text-white text-xl font-bold mb-8 flex items-center">
+        <span class="text-pink-400 mr-2">03.</span> Featured_Projects
+        <span class="ml-4 h-[1px] bg-slate-800 flex-grow"></span>
+    </h2>
+    
+    <div class="space-y-6">
+        <!-- Project 1 - School Website -->
+        <div class="bg-slate-900/40 border border-slate-800 rounded-lg p-6 hover:border-pink-400/30 transition group">
+            <div class="flex flex-col md:flex-row md:items-center justify-between gap-4">
+                <div class="flex-1">
+                    <div class="flex items-center gap-3 mb-2">
+                        <span class="text-pink-400 text-xl">▹</span>
+                        <h3 class="text-white font-bold text-lg">School Management System</h3>
+                    </div>
+                    <p class="text-slate-400 text-sm mb-3 pl-6">
+                        A comprehensive web platform for my school with student portals, grade management, and announcement systems. Built with Flask and PostgreSQL.
+                    </p>
+                    <div class="flex flex-wrap gap-2 pl-6">
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">Flask</span>
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">PostgreSQL</span>
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">Tailwind</span>
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">Jinja2</span>
+                    </div>
+                </div>
+                <div class="flex gap-3 md:flex-col lg:flex-row">
+                    <a href="https://school-website-link.com" target="_blank" class="border border-pink-400 text-pink-400 px-4 py-2 text-xs rounded hover:bg-pink-400/10 transition text-center whitespace-nowrap">
+                        Live Demo →
+                    </a>
+                    <a href="https://github.com/yourusername/school-website" target="_blank" class="border border-slate-600 text-slate-400 px-4 py-2 text-xs rounded hover:border-pink-400 hover:text-pink-400 transition text-center whitespace-nowrap">
+                        GitHub →
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Project 2 - NLP Sentiment Analyzer -->
+        <div class="bg-slate-900/40 border border-slate-800 rounded-lg p-6 hover:border-pink-400/30 transition group">
+            <div class="flex flex-col md:flex-row md:items-center justify-between gap-4">
+                <div class="flex-1">
+                    <div class="flex items-center gap-3 mb-2">
+                        <span class="text-pink-400 text-xl">▹</span>
+                        <h3 class="text-white font-bold text-lg">Amapiano Sentiment AI</h3>
+                    </div>
+                    <p class="text-slate-400 text-sm mb-3 pl-6">
+                        NLP model trained to analyze sentiment in Amapiano song lyrics and social media mentions. Special focus on Kelvin Momo's discography.
+                    </p>
+                    <div class="flex flex-wrap gap-2 pl-6">
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">PyTorch</span>
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">Transformers</span>
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">NLTK</span>
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">FastAPI</span>
+                    </div>
+                </div>
+                <div class="flex gap-3 md:flex-col lg:flex-row">
+                    <a href="https://huggingface.co/spaces/yourusername/amapiano-sentiment" target="_blank" class="border border-pink-400 text-pink-400 px-4 py-2 text-xs rounded hover:bg-pink-400/10 transition text-center whitespace-nowrap">
+                        Live Demo →
+                    </a>
+                    <a href="https://github.com/yourusername/amapiano-nlp" target="_blank" class="border border-slate-600 text-slate-400 px-4 py-2 text-xs rounded hover:border-pink-400 hover:text-pink-400 transition text-center whitespace-nowrap">
+                        GitHub →
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Project 3 - Automation Bot -->
+        <div class="bg-slate-900/40 border border-slate-800 rounded-lg p-6 hover:border-pink-400/30 transition group">
+            <div class="flex flex-col md:flex-row md:items-center justify-between gap-4">
+                <div class="flex-1">
+                    <div class="flex items-center gap-3 mb-2">
+                        <span class="text-pink-400 text-xl">▹</span>
+                        <h3 class="text-white font-bold text-lg">WhatsApp Automation Suite</h3>
+                    </div>
+                    <p class="text-slate-400 text-sm mb-3 pl-6">
+                        Python-based automation tool for WhatsApp messaging, including scheduled broadcasts and auto-replies using Selenium and PyWhatKit.
+                    </p>
+                    <div class="flex flex-wrap gap-2 pl-6">
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">Selenium</span>
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">PyWhatKit</span>
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">Flask</span>
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">Celery</span>
+                    </div>
+                </div>
+                <div class="flex gap-3 md:flex-col lg:flex-row">
+                    <a href="https://your-automation-demo.com" target="_blank" class="border border-pink-400 text-pink-400 px-4 py-2 text-xs rounded hover:bg-pink-400/10 transition text-center whitespace-nowrap">
+                        Live Demo →
+                    </a>
+                    <a href="https://github.com/yourusername/whatsapp-bot" target="_blank" class="border border-slate-600 text-slate-400 px-4 py-2 text-xs rounded hover:border-pink-400 hover:text-pink-400 transition text-center whitespace-nowrap">
+                        GitHub →
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Project 4 - Data Dashboard -->
+        <div class="bg-slate-900/40 border border-slate-800 rounded-lg p-6 hover:border-pink-400/30 transition group">
+            <div class="flex flex-col md:flex-row md:items-center justify-between gap-4">
+                <div class="flex-1">
+                    <div class="flex items-center gap-3 mb-2">
+                        <span class="text-pink-400 text-xl">▹</span>
+                        <h3 class="text-white font-bold text-lg">Zim Economy Dashboard</h3>
+                    </div>
+                    <p class="text-slate-400 text-sm mb-3 pl-6">
+                        Real-time data visualization dashboard tracking Zimbabwe economic indicators, inflation rates, and forex rates using public APIs.
+                    </p>
+                    <div class="flex flex-wrap gap-2 pl-6">
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">Dash</span>
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">Plotly</span>
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">Pandas</span>
+                        <span class="text-[10px] bg-slate-800 text-pink-400 px-2 py-1 rounded">Redis</span>
+                    </div>
+                </div>
+                <div class="flex gap-3 md:flex-col lg:flex-row">
+                    <a href="https://zim-econ-dashboard.com" target="_blank" class="border border-pink-400 text-pink-400 px-4 py-2 text-xs rounded hover:bg-pink-400/10 transition text-center whitespace-nowrap">
+                        Live Demo →
+                    </a>
+                    <a href="https://github.com/yourusername/zim-dashboard" target="_blank" class="border border-slate-600 text-slate-400 px-4 py-2 text-xs rounded hover:border-pink-400 hover:text-pink-400 transition text-center whitespace-nowrap">
+                        GitHub →
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- View All Projects Button -->
+    <div class="text-center mt-10">
+        <a href="https://github.com/yourusername" target="_blank" class="inline-flex items-center gap-2 border border-slate-700 text-slate-400 px-6 py-3 text-sm rounded hover:border-pink-400 hover:text-pink-400 transition">
+            <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path d="M12 0C5.374 0 0 5.373 0 12c0 5.302 3.438 9.8 8.205 11.387.6.113.82-.26.82-.58 0-.287-.01-1.05-.015-2.06-3.338.726-4.042-1.61-4.042-1.61-.546-1.39-1.335-1.76-1.335-1.76-1.09-.746.082-.73.082-.73 1.205.085 1.84 1.237 1.84 1.237 1.07 1.834 2.807 1.304 3.492.997.108-.775.418-1.305.762-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.468-2.38 1.235-3.22-.123-.3-.535-1.52.117-3.16 0 0 1.008-.322 3.3 1.23.96-.267 1.98-.4 3-.405 1.02.005 2.04.138 3 .405 2.29-1.552 3.297-1.23 3.297-1.23.653 1.64.24 2.86.118 3.16.768.84 1.233 1.91 1.233 3.22 0 4.61-2.804 5.62-5.476 5.92.43.37.824 1.102.824 2.22 0 1.602-.015 2.894-.015 3.287 0 .322.216.698.83.578C20.565 21.795 24 17.3 24 12c0-6.627-5.373-12-12-12z"/></svg>
+            View All Projects on GitHub
+        </a>
+    </div>
+</section>
+
     <section id="contact" class="mb-48 text-center max-w-md mx-auto">  
         <h2 class="text-pink-400 text-sm mb-4 tracking-widest font-bold">04. DISPATCH</h2>  
         <h3 class="text-3xl font-bold text-white mb-6 underline underline-offset-4 decoration-pink-500">Get In Touch</h3>  
